--- a/style.css
+++ b/style.css
@@ -321,16 +321,24 @@ a {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 10px;
   }
 
   .perfil {
     flex-direction: column;
     align-items: center;
+    margin: 0;
   }
 
   .nav ul {
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+
+  }
+
+  .nav ul li {
+    margin: 5px;
   }
 
   /* MAIN */
@@ -375,12 +383,5 @@ a {
   .contactos__img {
     width: 70px;
     height: 70px;
-
-  }
-
-  /* FOOTER */
-
-  .footer {
-
   }
 }
